Finalizada la cabecera

--- a/blockpost.html
+++ b/blockpost.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <h1>Primer pagina</h1>
-    <div>
-        cabecera
+    <div id="cabecera">
+        HyperBlock
     </div>
 </body>
 </html>
